FLUID-5678: Temporary fix of example page overflow issue

--- a/src/framework/preferences/css/stylus/SeparatedPanelPrefsEditorFrame.styl
+++ b/src/framework/preferences/css/stylus/SeparatedPanelPrefsEditorFrame.styl
@@ -76,6 +76,7 @@ html {
 
     .fl-inputs {
         float: none;
+        padding: 0;
     }
 
     label {
